<resources>
    <string name="app_name">Study Buddy</string>
    <string name="facebook_app_id">439451673338174</string>
    <string name="fb_login_protocol_scheme">fb439451673338174</string>
    <string name="NotificationSwitch">Allow notification</string>
    <string name="LogOutButton">Log Out</string>
    <string name="setting">Settings</string>
    <string name="profilePic">TODO</string>
    <string name="UserName">Sample User</string>
    <string name="ImportCalendar">Import Calendar</string>
    <string name="rightArrow"><![CDATA[>]]></string>
    <string name="backArrow"><![CDATA[<]]></string>
    <string name="ipAddress">128.189.74.250</string>
    <!-- Login -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBuild your relationship with others</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_first_name">First Name</string>
    <string name="your_last_name">Last Name</string>
    <string name="login_status">press to login</string>
    <string name="signup_status">press to signup</string>

    <!-- Shared preferences -->
    <string name="current_user_id">current_user_id</string>
    <string name="user_id_key">com.example.study_buddy.USER_ID_KEY</string>

    <string-array name="frequency">
        <item>NEVER</item>
        <item>DAILY</item>
        <item>WEEKLY</item>
        <item>MONTHLY</item>
    </string-array>

    <string-array name="time">
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
        <item>13:00</item>
        <item>14:00</item>
        <item>15:00</item>
        <item>16:00</item>
        <item>17:00</item>
        <item>18:00</item>
        <item>19:00</item>
        <item>20:00</item>
        <item>21:00</item>
        <item>22:00</item>
        <item>23:00</item>
    </string-array>

    <!--    notification related string-->
    <string name="channel_name">schedule meeting</string>
    <string name="channel_description">This is the channel for scheduling a meeting</string>
    <string name="accept">Accept</string>
    <string name="refuse">Decline</string>

    <string name="meeting_notification_title_template">Meeting: %1$s</string>

    <!-- TODO: remove this placeholder text -->
    <string name="meeting_notification_placeholder_text_template">You said %1$s and lorem ipsum
        dolor sit amet, consectetur adipiscing elit. Etiam non enim magna. Morbi dictum, velit vel
        semper venenatis, magna odio volutpat velit, at ullamcorper nulla lacus sed turpis.
        Pellentesque vitae metus elit, nec tincidunt tellus. Integer sed nisl sem, ullamcorper
        ornare lacus. Duis ac mauris sed massa congue volutpat. Donec sed erat sit amet turpis
        viverra rhoncus sit amet nec magna. Donec lacinia ligula at libero volutpat volutpat nec nec
        tortor.
    </string>

    <string name="action_share">Share</string>
    <string name="action_reply">Reply</string>
</resources>
